feat(extension): add settings page for IB connection configuration
- Add settings.html with IB connection settings UI
- Add settings.js with save/load settings functionality
- Add settings.css with toggle switches and form styling
- Add test connection feature to verify IB API connectivity
- Add quick preset buttons for common port configurations
  (TWS Paper: 7497, TWS Live: 7496, Gateway Paper: 4001, Gateway Live: 4002)
- Update native host with _handle_test_connection and _handle_get_settings handlers
- Improve error handling with friendly dependency missing messages
- Update popup.html with settings button in header
- Fix popup.js DOM element ID mappings
- Update shebang to use virtual environment Python
- Update README.md with new features and installation instructions
- Update extension/README.md with comprehensive usage guide

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -9,7 +9,12 @@
   <div class="container">
     <header>
       <h1>IB Portfolio Analyzer</h1>
-      <span class="status" id="status">未连接</span>
+      <div class="header-right">
+        <span class="status" id="status">未连接</span>
+        <button id="settings-btn" class="btn-icon-only" title="设置">
+          ⚙️
+        </button>
+      </div>
     </header>
 
     <!-- 加载状态 -->
