feat(v1.2): 添加连接状态管理、自动刷新和单元测试
核心功能:
- IBClient 添加 ConnectionState 状态机和自动重连
- 添加自定义异常类: ConnectionError, AuthenticationError, TimeoutError
- 支持状态变更和错误回调通知

Chrome 扩展:
- 添加自动刷新功能和切换开关
- 改进错误消息，提供友好的中文提示
- 设置页同步自动刷新配置

质量保障:
- 添加 40 个 IBClient 单元测试
- 测试覆盖连接状态、重连逻辑、数据模型等

修复:
- 修复 disconnect() 在模拟模式下未重置重连计数的问题

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -119,12 +119,24 @@
 
     <!-- 底部按钮 -->
     <footer>
-      <button id="refresh-btn" class="btn-primary">
-        <span class="btn-icon">↻</span> 刷新数据
-      </button>
-      <button id="report-btn" class="btn-secondary">
-        <span class="btn-icon">📊</span> 完整报告
-      </button>
+      <div class="footer-row">
+        <button id="refresh-btn" class="btn-primary">
+          <span class="btn-icon">↻</span> 刷新数据
+        </button>
+        <button id="report-btn" class="btn-secondary">
+          <span class="btn-icon">📊</span> 完整报告
+        </button>
+      </div>
+      <div class="footer-row auto-refresh-row">
+        <label class="auto-refresh-label" for="auto-refresh-toggle">
+          <span id="auto-refresh-indicator" class="auto-refresh-indicator hidden" title="自动刷新中">●</span>
+          <span>自动刷新</span>
+        </label>
+        <label class="toggle-switch">
+          <input type="checkbox" id="auto-refresh-toggle">
+          <span class="toggle-slider"></span>
+        </label>
+      </div>
     </footer>
 
     <div class="update-time">
